# mchili-gpt

./: .env  Cargo.toml  example  schema.sql
migrations/: 20250919_create_conversations.sql
src/: main.rs
