[package]
name = "sms_chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dotenvy = "0.15"
