[package]
name = "sms_chatbot"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql", "macros"] }
dotenvy = "0.15"
openssl = { version = "0.10", features = ["vendored"] }

